Drop fallback build

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"analyze-bundles:server": "yarn run build-server-stats && webpack-bundle-analyzer client/stats-server.json build -h 127.0.0.1 -p 9898 -s parsed",
 		"analyze-icfy": "yarn run build-client-stats && node --max-old-space-size=4096 bin/icfy-analyze.js",
 		"postcss": "postcss -r --config packages/calypso-build/postcss.config.js",
-		"build": "yarn run build-static && yarn run build-css && run-p -s 'build-devdocs:*' && run-p -s build-server build-client-if-prod build-client-if-desktop",
+		"build": "yarn run build-static && yarn run build-css && run-p -s 'build-devdocs:*' && run-p -s build-server build-client-if-prod",
 		"build-css": "run-p -s 'build-css:*'",
 		"build-css:directly": "node bin/render-stylesheet.js --in client/assets/stylesheets/directly.scss --out public/directly.css && yarn run postcss public/directly.css",
 		"build-css:reader-mobile": "node bin/render-stylesheet.js --in client/assets/stylesheets/reader-mobile.scss --out public/reader-mobile.css && yarn run postcss public/reader-mobile.css",
@@ -76,14 +76,9 @@
 		"build-server": "mkdirp build && BROWSERSLIST_ENV=server webpack --config client/webpack.config.node.js --stats-preset errors-only && yarn run build-server:copy-modules",
 		"build-server:copy-modules": "node -e \"process.env.CALYPSO_ENV === 'production' && process.exit(1)\" || node bin/copy-production-modules.js",
 		"build-server-stats": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=true yarn run build-server",
-		"build-client": "yarn run build-client-evergreen",
-		"build-client-do": "webpack --config client/webpack.config.js --stats-preset errors-only",
-		"build-client-fallback": "BROWSERSLIST_ENV=defaults yarn run build-client-do && yarn run validate-fallback-es5",
-		"build-client-evergreen": "BROWSERSLIST_ENV=evergreen yarn run build-client-do",
-		"build-client-both": "CONCURRENT_BUILDS=2 concurrently -c cyan -n \"fallback ,evergreen\" \"yarn run build-client-fallback\" \"yarn run build-client-evergreen\"",
-		"build-client-if-prod": "node -e \"process.env.CALYPSO_ENV === 'production' && process.exit(1)\" || yarn run build-client-both && yarn run build-languages-if-enabled",
-		"build-client-if-desktop": "node -e \"(process.env.CALYPSO_ENV === 'desktop' || process.env.CALYPSO_ENV === 'desktop-development') && process.exit(1)\" || yarn run build-client-fallback",
-		"build-client-stats": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=true yarn run build-client-evergreen",
+		"build-client": "BROWSERSLIST_ENV=evergreen yarn webpack --config client/webpack.config.js --stats-preset errors-only",
+		"build-client-if-prod": "node -e \"process.env.CALYPSO_ENV === 'production' && process.exit(1)\" || yarn run build-client && yarn run build-languages-if-enabled",
+		"build-client-stats": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=true yarn run build-client",
 		"build-packages": "{ [ \"${SKIP_TSC:-}\" = \"true\" ] || tsc --build packages/tsconfig.json; } && yarn workspaces foreach --all --parallel --verbose run prepare",
 		"build-languages": "yarn run translate && node bin/build-languages.js",
 		"build-languages-if-enabled": "node -e \"(process.env.BUILD_TRANSLATION_CHUNKS === 'true' || process.env.ENABLE_FEATURES === 'use-translation-chunks') && process.exit(1)\" || yarn run build-languages",
@@ -105,19 +100,11 @@
 		"lint:js": "eslint --cache .",
 		"lint:mixedindent": "mixedindentlint --ignore-comments \"client/**/*.scss\" \"assets/**/*.scss\" \"**/*.js\" \"**/*.jsx\" \"**/*.tsx\" \"**/*.tsx\" \"!build/**\" \"!node_modules/**\" \"!public/**\" \"!client/config/index.js\"",
 		"lint:package-json": "npmPkgJsonLint './package.json' './client/package.json' './packages/*/package.json' './apps/*/package.json'",
-		"start": "npx check-node-version --package && node bin/welcome.js && yarn run build && run-p -s start-build-if-web start-build-if-desktop",
-		"start-fallback": "DEV_TARGET=fallback yarn run start",
+		"start": "npx check-node-version --package && node bin/welcome.js && yarn run build && yarn run start-build",
 		"start-jetpack-cloud": "CALYPSO_ENV=jetpack-cloud-development yarn run start",
-		"start-jetpack-cloud-p": "PORT=3001 CALYPSO_ENV=jetpack-cloud-development yarn run build-server && PORT=3001 CALYPSO_ENV=jetpack-cloud-development yarn run start-build-web",
+		"start-jetpack-cloud-p": "PORT=3001 CALYPSO_ENV=jetpack-cloud-development yarn run build-server && PORT=3001 CALYPSO_ENV=jetpack-cloud-development yarn run start-build",
 		"reformat-files": "./node_modules/.bin/prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\"",
-		"start-build-do": "node build/server.js | bunyan -o short",
-		"start-build-fallback": "BROWSERSLIST_ENV=defaults yarn run start-build-do",
-		"start-build-evergreen": "BROWSERSLIST_ENV=evergreen yarn run start-build-do",
-		"start-build-if-desktop": "node -e \"(process.env.CALYPSO_ENV === 'desktop' || process.env.CALYPSO_ENV === 'desktop-development') && process.exit(1)\" || yarn run start-build-fallback",
-		"start-build-if-web": "node -e \"(process.env.CALYPSO_ENV !== 'desktop' && process.env.CALYPSO_ENV !== 'desktop-development') && process.exit(1)\" || yarn run start-build-web",
-		"start-build-web": "run-p -s start-build-web-if-fallback start-build-web-if-evergreen",
-		"start-build-web-if-fallback": "node -e \"process.env.DEV_TARGET === 'fallback' && process.exit(1)\" || yarn run start-build-fallback",
-		"start-build-web-if-evergreen": "node -e \"(! process.env.DEV_TARGET || process.env.DEV_TARGET === 'evergreen') && process.exit(1)\" || yarn run start-build-evergreen",
+		"start-build": "BROWSERSLIST_ENV=evergreen node build/server.js | bunyan -o short",
 		"test": "run-s -s test-client test-packages test-server test-build-tools",
 		"test-client": "TZ=UTC jest -c=test/client/jest.config.js",
 		"test-client:watch": "yarn run test-client --watch",
@@ -136,8 +123,7 @@
 		"tsc": "NODE_OPTIONS='--max-old-space-size=4096' tsc",
 		"typecheck": "yarn run tsc --project client",
 		"update-deps": "npx rimraf yarn.lock && yarn run distclean && PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true yarn install && replace --silent 'http://' 'https://' . --recursive --include='yarn.lock' && touch -m node_modules",
-		"validate-fallback-es5": "npx eslint --parser-options=ecmaVersion:5 --no-eslintrc --no-ignore ./public/fallback/*.js",
-		"whybundled": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=withreasons CONCATENATE_MODULES=false yarn run build-client-evergreen && whybundled client/stats.json",
+		"whybundled": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=withreasons CONCATENATE_MODULES=false yarn run build-client && whybundled client/stats.json",
 		"whybundled:server": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=withreasons CONCATENATE_MODULES=false yarn run build-server && whybundled client/stats-server.json",
 		"composite-checkout-demo": "echo 'Deprecated, run `yarn run composite-checkout:storybook:start` instead'",
 		"components:storybook:start": "start-storybook -c packages/components/.storybook",
