--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
 		"@storybook/react": "^6.1.10",
 		"@types/cookie": "^0.4.1",
 		"@types/debug": "^4.1.7",
+		"@types/enzyme": "^3.10.9",
 		"@types/fast-json-stable-stringify": "^2.0.0",
 		"@types/lodash": "^4.14.171",
 		"@types/page": "^1.11.3",
