Remove es5 postbuild checks
Now that IE11 is deprecated, es5 postbuild checks are unneeded.

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"build-server-stats": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=true yarn run build-server",
 		"build-client": "yarn run build-client-evergreen",
 		"build-client-do": "webpack --config client/webpack.config.js --stats-preset errors-only",
-		"build-client-fallback": "BROWSERSLIST_ENV=defaults yarn run build-client-do && yarn run validate-fallback-es5",
+		"build-client-fallback": "BROWSERSLIST_ENV=defaults yarn run build-client-do",
 		"build-client-evergreen": "BROWSERSLIST_ENV=evergreen yarn run build-client-do",
 		"build-client-both": "CONCURRENT_BUILDS=2 concurrently -c cyan -n \"fallback ,evergreen\" \"yarn run build-client-fallback\" \"yarn run build-client-evergreen\"",
 		"build-client-if-prod": "node -e \"process.env.CALYPSO_ENV === 'production' && process.exit(1)\" || yarn run build-client-both && yarn run build-languages-if-enabled",
@@ -136,7 +136,6 @@
 		"tsc": "NODE_OPTIONS='--max-old-space-size=4096' tsc",
 		"typecheck": "yarn run tsc --project client",
 		"update-deps": "npx rimraf yarn.lock && yarn run distclean && PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true yarn install && replace --silent 'http://' 'https://' . --recursive --include='yarn.lock' && touch -m node_modules",
-		"validate-fallback-es5": "npx eslint --parser-options=ecmaVersion:5 --no-eslintrc --no-ignore ./public/fallback/*.js",
 		"whybundled": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=withreasons CONCATENATE_MODULES=false yarn run build-client-evergreen && whybundled client/stats.json",
 		"whybundled:server": "NODE_ENV=production CALYPSO_ENV=production EMIT_STATS=withreasons CONCATENATE_MODULES=false yarn run build-server && whybundled client/stats-server.json",
 		"composite-checkout-demo": "echo 'Deprecated, run `yarn run composite-checkout:storybook:start` instead'",
