Fixes for wp monorepo update
Squashed commit of the following:

commit 95ca82b
Author: Sergio Cinos <sergio.cinos@gmail.com>
Date:   Thu Jul 22 11:27:51 2021 +0200

    Add global CSS

commit 1e0c99d
Author: Sergio Cinos <sergio.cinos@gmail.com>
Date:   Thu Jul 22 09:36:36 2021 +0200

    Do not import types-patch

commit dee6bd6
Author: Sergio Cinos <sergio.cinos@gmail.com>
Date:   Thu Jul 22 09:29:26 2021 +0200

    Delete unused types patch

commit 2465d15
Author: Sergio Cinos <sergio.cinos@gmail.com>
Date:   Thu Jul 22 09:18:20 2021 +0200

    Fix types

--- a/packages/page-pattern-modal/package.json
+++ b/packages/page-pattern-modal/package.json
@@ -43,6 +43,7 @@
 	"devDependencies": {
 		"@testing-library/react": "^12.0.0",
 		"jest": "^27.0.6",
+		"jest-canvas-mock": "^2.3.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"typescript": "^4.4.2"
