--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,220 +13,342 @@ nodeLinker: node-modules
 packageExtensions:
   '@emotion/native@10.0.27':
     peerDependencies:
-      '@emotion/core': '*'
-      react: '*'
-  '@storybook/core@6.1.10':
+      "@emotion/core": "*"
+      react: "*"
+  "@storybook/core@6.1.10":
     peerDependencies:
-      typescript: '*'
-  '@storybook/react@6.1.10':
+      typescript: "*"
+  "@storybook/react@6.1.10":
     peerDependencies:
-      typescript: '*'
-  '@types/wordpress__block-editor@2.2.9':
+      typescript: "*"
+  "@types/wordpress__block-editor@2.2.9":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
-  '@types/wordpress__blocks@6.4.12':
+      react: "*"
+      react-dom: "*"
+  "@types/wordpress__block-editor@6.0.3":
     peerDependencies:
-      react: '*'
-  '@types/wordpress__components@9.8.6':
+      react: "*"
+      react-dom: "*"
+  "@types/wordpress__blocks@6.4.12":
     peerDependencies:
-      react: '*'
-  '@types/wordpress__data-controls@1.0.5':
+      react: "*"
+  "@types/wordpress__components@9.8.6":
     peerDependencies:
-      react-native: '*'
-  '@types/wordpress__editor@9.4.6':
+      react: "*"
+  "@types/wordpress__components@14.0.3":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-  '@types/wordpress__media-utils@0.2.4':
+      react: "*"
+  "@types/wordpress__data-controls@1.0.5":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-  '@types/wordpress__plugins@2.3.7':
+      react-native: "*"
+  "@types/wordpress__editor@10.0.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/annotations@1.24.8':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+  "@types/wordpress__media-utils@0.2.4":
     peerDependencies:
-      react: '*'
-  '@wordpress/api-fetch@3.23.1':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+  "@types/wordpress__plugins@2.3.7":
     peerDependencies:
-      react-native: '*'
-  '@wordpress/api-fetch@4.0.0':
+      react: "*"
+  "@wordpress/annotations@1.24.8":
     peerDependencies:
-      react-native: '*'
-  '@wordpress/block-editor@5.3.3':
+      react: "*"
+  "@wordpress/api-fetch@3.23.1":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/block-library@2.29.3':
+      react-native: "*"
+  "@wordpress/api-fetch@4.0.0":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/blocks@7.0.6':
+      react-native: "*"
+  "@wordpress/api-fetch@5.2.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/blocks@8.0.3':
+      react-native: "*"
+  "@wordpress/block-editor@5.3.3":
     peerDependencies:
-      react: '*'
-  '@wordpress/components@12.0.8':
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+  "@wordpress/block-editor@7.0.1":
     peerDependencies:
-      '@wordpress/data': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-  '@wordpress/components@13.0.3':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/block-library@2.29.3":
     peerDependencies:
-      '@wordpress/data': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-  '@wordpress/compose@3.25.3':
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/block-library@5.0.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/core-data@2.26.3':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/blocks@7.0.6":
     peerDependencies:
-      react: '*'
-      react-native: '*'
-  '@wordpress/data-controls@1.21.3':
+      react: "*"
+  "@wordpress/blocks@8.0.3":
     peerDependencies:
-      react: '*'
-      react-native: '*'
-  '@wordpress/data@4.27.3':
+      react: "*"
+  "@wordpress/blocks@11.0.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/edit-post@3.27.3':
+      react: "*"
+      redux: "*"
+  "@wordpress/components@12.0.8":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/edit-site@1.17.3':
+      "@wordpress/data": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+  "@wordpress/components@13.0.3":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/editor@9.26.3':
+      "@wordpress/data": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+  "@wordpress/components@16.0.0":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/format-library@1.27.3':
+      "@wordpress/data": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+  "@wordpress/compose@3.25.3":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/interface@1.0.6':
+      react: "*"
+  "@wordpress/compose@5.0.1":
     peerDependencies:
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-  '@wordpress/interface@2.0.2':
+      react: "*"
+  "@wordpress/core-data@2.26.3":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/jest-preset-default@7.0.3':
+      react: "*"
+      react-native: "*"
+  "@wordpress/core-data@4.0.1":
     peerDependencies:
-      '@babel/core': '*'
-      react: '*'
-      react-dom: '*'
-  '@wordpress/keyboard-shortcuts@1.14.3':
+      react: "*"
+      react-native: "*"
+      redux: "*"
+  "@wordpress/data-controls@1.21.3":
     peerDependencies:
-      react: '*'
-  '@wordpress/list-reusable-blocks@1.25.8':
+      react: "*"
+      react-native: "*"
+  "@wordpress/data-controls@2.2.2":
     peerDependencies:
-      '@wordpress/data': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-  '@wordpress/media-utils@1.20.3':
+      react: "*"
+      react-native: "*"
+      redux: "*"
+  "@wordpress/data@4.27.3":
     peerDependencies:
-      react-native: '*'
-  '@wordpress/notices@2.13.3':
+      react: "*"
+  "@wordpress/data@6.0.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/nux@3.25.3':
+      react: "*"
+  "@wordpress/edit-post@3.27.3":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/plugins@2.25.3':
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/edit-post@5.0.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/postcss-plugins-preset@3.0.0':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/edit-site@3.0.1":
     peerDependencies:
-      postcss: '*'
-  '@wordpress/reusable-blocks@1.2.3':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/editor@9.26.3":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/rich-text@3.25.3':
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/editor@11.0.1":
     peerDependencies:
-      react: '*'
-  '@wordpress/scripts@15.0.1':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/format-library@1.27.3":
     peerDependencies:
-      '@babel/core': '*'
-      react: '*'
-      react-dom: '*'
-  '@wordpress/server-side-render@1.21.3':
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+  "@wordpress/format-library@3.0.1":
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
-  '@wordpress/url@2.22.2':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/interface@1.0.6":
     peerDependencies:
-      react-native: '*'
-  '@wordpress/viewport@2.26.3':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+  "@wordpress/interface@2.0.2":
     peerDependencies:
-      react: '*'
-  '@wp-g2/components@0.0.140':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      "@wp-g2/create-styles": "*"
+      reakit-utils: "*"
+  "@wordpress/interface@4.0.1":
     peerDependencies:
-      '@wordpress/data': '*'
-      '@wordpress/is-shallow-equal': '*'
-  '@wp-g2/components@0.0.160':
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/jest-preset-default@7.1.0":
     peerDependencies:
-      '@wordpress/data': '*'
-      '@wordpress/is-shallow-equal': '*'
-  '@wp-g2/context@0.0.140':
+      "@babel/core": "*"
+      react: "*"
+      react-dom: "*"
+  "@wordpress/keyboard-shortcuts@1.14.3":
     peerDependencies:
-      '@wordpress/data': '*'
-      '@wordpress/is-shallow-equal': '*'
-  '@wp-g2/context@0.0.160':
+      react: "*"
+  "@wordpress/keyboard-shortcuts@3.0.1":
     peerDependencies:
-      '@wordpress/data': '*'
-      '@wordpress/is-shallow-equal': '*'
-  '@wp-g2/styles@0.0.140':
+      react: "*"
+      redux: "*"
+  "@wordpress/list-reusable-blocks@1.25.8":
     peerDependencies:
-      '@wordpress/data': '*'
-      '@wordpress/is-shallow-equal': '*'
-  '@wp-g2/styles@0.0.160':
+      "@wordpress/data": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+  "@wordpress/media-utils@1.20.3":
     peerDependencies:
-      '@wordpress/data': '*'
-      '@wordpress/is-shallow-equal': '*'
+      react-native: "*"
+  "@wordpress/media-utils@3.0.0":
+    peerDependencies:
+      react-native: "*"
+  "@wordpress/notices@2.13.3":
+    peerDependencies:
+      react: "*"
+  "@wordpress/notices@3.2.2":
+    peerDependencies:
+      react: "*"
+      redux: "*"
+  "@wordpress/nux@5.0.1":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      redux: "*"
+      reakit-utils: "*"
+  "@wordpress/plugins@2.25.3":
+    peerDependencies:
+      react: "*"
+  "@wordpress/plugins@4.0.1":
+    peerDependencies:
+      react: "*"
+  "@wordpress/postcss-plugins-preset@3.2.0":
+    peerDependencies:
+      postcss: "*"
+  "@wordpress/reusable-blocks@1.2.3":
+    peerDependencies:
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+  "@wordpress/reusable-blocks@3.0.1":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/rich-text@3.25.3":
+    peerDependencies:
+      react: "*"
+  "@wordpress/rich-text@5.0.1":
+    peerDependencies:
+      react: "*"
+      redux: "*"
+  "@wordpress/scripts@18.0.0":
+    peerDependencies:
+      "@babel/core": "*"
+      react: "*"
+      react-dom: "*"
+  "@wordpress/server-side-render@1.21.3":
+    peerDependencies:
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/server-side-render@3.0.1":
+    peerDependencies:
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
+  "@wordpress/url@2.22.2":
+    peerDependencies:
+      react-native: "*"
+  "@wordpress/url@3.2.1":
+    peerDependencies:
+      react-native: "*"
+  "@wordpress/viewport@2.26.3":
+    peerDependencies:
+      react: "*"
+  "@wordpress/viewport@4.0.1":
+    peerDependencies:
+      react: "*"
+      redux: "*"
+  "@wp-g2/components@0.0.140":
+    peerDependencies:
+      "@wordpress/data": "*"
+      "@wordpress/is-shallow-equal": "*"
+  "@wp-g2/components@0.0.160":
+    peerDependencies:
+      "@wordpress/data": "*"
+      "@wordpress/is-shallow-equal": "*"
+  "@wp-g2/context@0.0.140":
+    peerDependencies:
+      "@wordpress/data": "*"
+      "@wordpress/is-shallow-equal": "*"
+  "@wp-g2/context@0.0.160":
+    peerDependencies:
+      "@wordpress/data": "*"
+      "@wordpress/is-shallow-equal": "*"
+  "@wp-g2/styles@0.0.140":
+    peerDependencies:
+      "@wordpress/data": "*"
+      "@wordpress/is-shallow-equal": "*"
+  "@wp-g2/styles@0.0.160":
+    peerDependencies:
+      "@wordpress/data": "*"
+      "@wordpress/is-shallow-equal": "*"
   fake-indexeddb@3.1.3:
     peerDependencies:
       core-js-bundle: '*'
@@ -237,11 +359,12 @@ packageExtensions:
         optional: true
   '@automattic/isolated-block-editor@1.0.2':
     peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
+      "@wp-g2/create-styles": "*"
+      react: "*"
+      react-dom: "*"
+      react-native: "*"
+      reakit-utils: "*"
+      redux: "*"
   jest-enzyme@7.1.2:
     peerDependencies:
       react: '*'
@@ -260,11 +383,12 @@ packageExtensions:
       react-native: '*'
   react-dev-utils@10.2.1:
     peerDependencies:
-      typescript: '*'
-      webpack: '*'
-  react-live@1.12.0:
+      typescript: "*"
+      webpack: "*"
+  react-live@2.4.0:
     peerDependencies:
-      react: '*'
+      react: "*"
+      react-dom: "*"
   react-with-styles@3.2.3:
     peerDependencies:
       react-dom: '*'
