--- a/packages/calypso-build/package.json
+++ b/packages/calypso-build/package.json
@@ -46,6 +46,7 @@
 		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.15.0",
 		"@types/webpack-env": "^1.16.2",
+		"@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
 		"@wordpress/babel-plugin-import-jsx-pragma": "^3.1.0",
 		"@wordpress/browserslist-config": "^4.1.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^3.2.1",
@@ -56,7 +57,6 @@
 		"css-loader": "^5.2.4",
 		"css-minimizer-webpack-plugin": "^1.3.0",
 		"duplicate-package-checker-webpack-plugin": "^3.0.0",
-		"enzyme-adapter-react-16": "^1.15.1",
 		"enzyme-to-json": "^3.4.3",
 		"jest-config": "^27.0.6",
 		"jest-enzyme": "^7.1.2",
