--- a/packages/composite-checkout/package.json
+++ b/packages/composite-checkout/package.json
@@ -44,7 +44,8 @@
 		"@wordpress/react-i18n": "^3.0.0",
 		"debug": "^4.1.1",
 		"prop-types": "^15.7.2",
-		"react-stripe-elements": "^4.0.2"
+		"react-stripe-elements": "^4.0.2",
+		"redux": "^4.0.5"
 	},
 	"devDependencies": {
 		"@automattic/calypso-build": "^9.0.0",
