--- a/packages/domain-picker/package.json
+++ b/packages/domain-picker/package.json
@@ -57,10 +57,10 @@
 		"@wordpress/data": "^6.0.1",
 		"@wordpress/element": "^4.0.0",
 		"@wordpress/i18n": "^4.2.1",
-		"@wp-g2/create-styles": "^0.0.154",
-		"react": "^16.12.0",
-		"react-native": "^0.63.4",
-		"reakit-utils": "^0.15.1"
+		"react": "^17.0.2",
+		"react-native": "^0.65.0",
+		"reakit-utils": "^0.15.1",
+		"redux": "^4.0.5"
 	},
 	"private": true
 }
