--- a/packages/onboarding/package.json
+++ b/packages/onboarding/package.json
@@ -48,13 +48,13 @@
 		"history": "^5.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"redux": "^4.0.5",
 		"typescript": "^4.3.5"
 	},
 	"peerDependencies": {
 		"@wordpress/i18n": "^4.2.1",
-		"@wp-g2/create-styles": "^0.0.154",
-		"react": "^16.8",
-		"react-native": "^0.63.4",
+		"react": "^17.0.2",
+		"react-native": "^0.65.0",
 		"reakit-utils": "^0.15.1"
 	},
 	"private": true
