--- a/packages/page-pattern-modal/package.json
+++ b/packages/page-pattern-modal/package.json
@@ -44,15 +44,16 @@
 		"@testing-library/react": "^12.0.0",
 		"jest": "^27.0.6",
 		"jest-canvas-mock": "^2.3.0",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"typescript": "^4.3.5"
 	},
 	"peerDependencies": {
 		"@wordpress/data": "^6.0.1",
-		"@wp-g2/create-styles": "^0.0.154",
 		"react": "^17.0.2",
-		"reakit-utils": "^0.15.1"
+		"react-native": "^0.65.0",
+		"reakit-utils": "^0.15.1",
+		"redux": "^4.0.5"
 	},
 	"scripts": {
 		"clean": "tsc --build ./tsconfig.json ./tsconfig-cjs.json --clean && npx rimraf dist",
