--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -17,6 +17,7 @@ packageExtensions:
       react: '*'
   '@storybook/csf-tools@6.3.8':
     peerDependencies:
+      webpack: '*'
       '@babel/core': '*'
   '@storybook/core-server@6.3.8':
     peerDependencies:
@@ -25,20 +26,20 @@ packageExtensions:
     peerDependencies:
       '@babel/core': '*'
       'webpack': '*'
-  '@types/wordpress__block-editor@2.2.9':
+  '@types/wordpress__block-editor@6.0.4':
     peerDependencies:
       react: '*'
       react-dom: '*'
   '@types/wordpress__blocks@6.4.12':
     peerDependencies:
       react: '*'
-  '@types/wordpress__components@9.8.6':
+  '@types/wordpress__components@14.0.3':
     peerDependencies:
       react: '*'
   '@types/wordpress__data-controls@1.0.5':
     peerDependencies:
       react-native: '*'
-  '@types/wordpress__editor@9.4.6':
+  '@types/wordpress__editor@10.0.1':
     peerDependencies:
       react: '*'
       react-dom: '*'
@@ -60,12 +61,22 @@ packageExtensions:
   '@wordpress/api-fetch@4.0.0':
     peerDependencies:
       react-native: '*'
+  '@wordpress/api-fetch@5.2.1':
+    peerDependencies:
+      react-native: '*'
   '@wordpress/block-editor@5.3.3':
     peerDependencies:
       '@wp-g2/create-styles': '*'
       react: '*'
       react-dom: '*'
       react-native: '*'
+      reakit-utils: '*'
+  '@wordpress/block-editor@7.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
       reakit-utils: '*'
   '@wordpress/block-library@2.29.3':
     peerDependencies:
@@ -74,12 +85,24 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+      redux: '*'
+  '@wordpress/block-library@5.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
+      reakit-utils: '*'
   '@wordpress/blocks@7.0.6':
     peerDependencies:
       react: '*'
   '@wordpress/blocks@8.0.3':
     peerDependencies:
       react: '*'
+  '@wordpress/blocks@11.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wordpress/components@12.0.8':
     peerDependencies:
       '@wordpress/data': '*'
@@ -92,18 +115,41 @@ packageExtensions:
       react: '*'
       react-dom: '*'
       react-native: '*'
+  '@wordpress/components@16.0.0':
+    peerDependencies:
+      '@wordpress/data': '*'
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
   '@wordpress/compose@3.25.3':
+    peerDependencies:
+      react: '*'
+  '@wordpress/compose@5.0.1':
     peerDependencies:
       react: '*'
   '@wordpress/core-data@2.26.3':
     peerDependencies:
       react: '*'
       react-native: '*'
+  '@wordpress/core-data@4.0.1':
+    peerDependencies:
+      react: '*'
+      react-native: '*'
+      redux: '*'
   '@wordpress/data-controls@1.21.3':
     peerDependencies:
       react: '*'
       react-native: '*'
+  '@wordpress/data-controls@2.2.2':
+    peerDependencies:
+      react: '*'
+      react-native: '*'
+      redux: '*'
   '@wordpress/data@4.27.3':
+    peerDependencies:
+      react: '*'
+  '@wordpress/data@6.0.1':
     peerDependencies:
       react: '*'
   '@wordpress/edit-post@3.27.3':
@@ -113,19 +159,35 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
-  '@wordpress/edit-site@1.17.3':
+      redux: '*'
+  '@wordpress/edit-post@5.0.1':
     peerDependencies:
-      '@wp-g2/create-styles': '*'
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
+      reakit-utils: '*'
+  '@wordpress/edit-site@3.0.1':
+    peerDependencies:
       react: '*'
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+      redux: '*'
   '@wordpress/editor@9.26.3':
     peerDependencies:
       '@wp-g2/create-styles': '*'
       react: '*'
       react-dom: '*'
       react-native: '*'
+      reakit-utils: '*'
+      redux: '*'
+  '@wordpress/editor@11.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
       reakit-utils: '*'
   '@wordpress/format-library@1.27.3':
     peerDependencies:
@@ -134,6 +196,13 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/format-library@3.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
+      reakit-utils: '*'
   '@wordpress/interface@1.0.6':
     peerDependencies:
       react: '*'
@@ -141,12 +210,19 @@ packageExtensions:
       react-native: '*'
   '@wordpress/interface@2.0.2':
     peerDependencies:
-      '@wp-g2/create-styles': '*'
       react: '*'
       react-dom: '*'
       react-native: '*'
+      '@wp-g2/create-styles': '*'
       reakit-utils: '*'
-  '@wordpress/jest-preset-default@7.0.3':
+  '@wordpress/interface@4.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
+      reakit-utils: '*'
+  '@wordpress/jest-preset-default@7.1.0':
     peerDependencies:
       '@babel/core': '*'
       react: '*'
@@ -154,6 +230,10 @@ packageExtensions:
   '@wordpress/keyboard-shortcuts@1.14.3':
     peerDependencies:
       react: '*'
+  '@wordpress/keyboard-shortcuts@3.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wordpress/list-reusable-blocks@1.25.8':
     peerDependencies:
       '@wordpress/data': '*'
@@ -163,20 +243,30 @@ packageExtensions:
   '@wordpress/media-utils@1.20.3':
     peerDependencies:
       react-native: '*'
+  '@wordpress/media-utils@3.0.0':
+    peerDependencies:
+      react-native: '*'
   '@wordpress/notices@2.13.3':
     peerDependencies:
       react: '*'
-  '@wordpress/nux@3.25.3':
+  '@wordpress/notices@3.2.2':
     peerDependencies:
-      '@wp-g2/create-styles': '*'
+      react: '*'
+      redux: '*'
+  '@wordpress/nux@5.0.1':
+    peerDependencies:
       react: '*'
       react-dom: '*'
       react-native: '*'
+      redux: '*'
       reakit-utils: '*'
   '@wordpress/plugins@2.25.3':
     peerDependencies:
       react: '*'
-  '@wordpress/postcss-plugins-preset@3.0.0':
+  '@wordpress/plugins@4.0.1':
+    peerDependencies:
+      react: '*'
+  '@wordpress/postcss-plugins-preset@3.2.0':
     peerDependencies:
       postcss: '*'
   '@wordpress/reusable-blocks@1.2.3':
@@ -186,10 +276,21 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/reusable-blocks@3.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      reakit-utils: '*'
+      redux: '*'
   '@wordpress/rich-text@3.25.3':
     peerDependencies:
       react: '*'
-  '@wordpress/scripts@15.0.1':
+  '@wordpress/rich-text@5.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
+  '@wordpress/scripts@18.0.0':
     peerDependencies:
       '@babel/core': '*'
       react: '*'
@@ -201,12 +302,27 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+      redux: '*'
+  '@wordpress/server-side-render@3.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      reakit-utils: '*'
+      redux: '*'
   '@wordpress/url@2.22.2':
+    peerDependencies:
+      react-native: '*'
+  '@wordpress/url@3.2.1':
     peerDependencies:
       react-native: '*'
   '@wordpress/viewport@2.26.3':
     peerDependencies:
       react: '*'
+  '@wordpress/viewport@4.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wp-g2/components@0.0.140':
     peerDependencies:
       '@wordpress/data': '*'
@@ -246,6 +362,7 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+      redux: '*'
   jest-enzyme@7.1.2:
     peerDependencies:
       react: '*'
@@ -266,9 +383,10 @@ packageExtensions:
     peerDependencies:
       typescript: '*'
       webpack: '*'
-  react-live@1.12.0:
+  react-live@2.4.0:
     peerDependencies:
       react: '*'
+      react-dom: '*'
   react-with-styles@3.2.3:
     peerDependencies:
       react-dom: '*'
