--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -11,7 +11,10 @@ logFilters:
 nodeLinker: node-modules
 
 packageExtensions:
-  '@emotion/native@10.0.27':
+  'chai-enzyme@1.0.0-beta.1':
+    peerDependencies:
+      react: "*"
+  "@emotion/native@10.0.27":
     peerDependencies:
       "@emotion/core": "*"
       react: "*"
