Try manually resolving react 17 as peer dep

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -24,6 +24,7 @@ packageExtensions:
   '@types/wordpress__block-editor@6.0.3':
     peerDependencies:
       react: '*'
+      react-dom: '*'
   '@types/wordpress__blocks@6.4.12':
     peerDependencies:
       react: '*'
