--- a/package.json
+++ b/package.json
@@ -326,7 +326,9 @@
 	"resolutions": {
 		"newspack-components/@wordpress/base-styles": "3.6.0",
 		"@automattic/newspack-blocks/swiper@4.5.1": "patch:swiper@4.5.1#.patches/swiper@4.5.1.diff",
-		"@automattic/newspack-blocks/prettier": "npm:wp-prettier@2.2.1-beta-1"
+		"@automattic/newspack-blocks/prettier": "npm:wp-prettier@2.2.1-beta-1",
+		"react-inspector": "npm:react-inspector@5.1.1",
+		"react-helmet-async": "npm:react-helmet-async@1.1.2"
 	},
 	"packageManager": "yarn@3.0.0"
 }
