Update isolated block editor package

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -47,9 +47,10 @@ packageExtensions:
   '@types/wordpress__plugins@2.3.7':
     peerDependencies:
       react: '*'
-  '@wordpress/annotations@1.24.8':
+  '@wordpress/annotations@2.2.2':
     peerDependencies:
       react: '*'
+      redux: '*'
   '@wordpress/api-fetch@3.23.1':
     peerDependencies:
       react-native: '*'
@@ -88,9 +89,6 @@ packageExtensions:
       react-native: '*'
       redux: '*'
       reakit-utils: '*'
-  '@wordpress/blocks@7.0.6':
-    peerDependencies:
-      react: '*'
   '@wordpress/blocks@8.0.3':
     peerDependencies:
       react: '*'
@@ -110,6 +108,11 @@ packageExtensions:
       react: '*'
       react-dom: '*'
       react-native: '*'
+  '@wordpress/components@15.0.0':
+    peerDependencies:
+      react: '*'
+      redux: '*'
+      react-dom: '*'
   '@wordpress/components@16.0.0':
     peerDependencies:
       '@wordpress/data': '*'
@@ -184,13 +187,6 @@ packageExtensions:
       react-native: '*'
       redux: '*'
       reakit-utils: '*'
-  '@wordpress/format-library@1.27.3':
-    peerDependencies:
-      '@wp-g2/create-styles': '*'
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
-      reakit-utils: '*'
   '@wordpress/format-library@3.0.1':
     peerDependencies:
       react: '*'
@@ -198,11 +194,6 @@ packageExtensions:
       react-native: '*'
       redux: '*'
       reakit-utils: '*'
-  '@wordpress/interface@1.0.6':
-    peerDependencies:
-      react: '*'
-      react-dom: '*'
-      react-native: '*'
   '@wordpress/interface@2.0.2':
     peerDependencies:
       react: '*'
@@ -229,12 +220,14 @@ packageExtensions:
     peerDependencies:
       react: '*'
       redux: '*'
-  '@wordpress/list-reusable-blocks@1.25.8':
+  '@wordpress/list-reusable-blocks@3.0.1':
     peerDependencies:
-      '@wordpress/data': '*'
       react: '*'
+      redux: '*'
       react-dom: '*'
       react-native: '*'
+      reakit-utils: '*'
+      '@wordpress/data': '*'
   '@wordpress/media-utils@1.20.3':
     peerDependencies:
       react-native: '*'
@@ -350,9 +343,8 @@ packageExtensions:
     peerDependenciesMeta:
       webpack:
         optional: true
-  '@automattic/isolated-block-editor@1.0.2':
+  '@automattic/isolated-block-editor@2.3.0':
     peerDependencies:
-      '@wp-g2/create-styles': '*'
       react: '*'
       react-dom: '*'
       react-native: '*'
