--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
 		"@automattic/explat-client-react-helpers": "^0.0.2",
 		"@automattic/format-currency": "^1.0.0-alpha.0",
 		"@automattic/i18n-utils": "^1.0.0",
-		"@automattic/isolated-block-editor": "~1.0.2",
+		"@automattic/isolated-block-editor": "^2.3.0",
 		"@automattic/js-utils": "^0.1.0",
 		"@automattic/language-picker": "^1.0.0",
 		"@automattic/languages": "^1.0.0",
