--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,63 @@ logFilters:
   - pattern: 'fsevents@*/* The platform * is incompatible with this module, link skipped.'
     level: discard
 
+  # Depends on
+  #   airbnb-prop-types: https://github.com/airbnb/prop-types/issues/73
+  #   react-autosize-textarea: https://github.com/buildo/react-autosize-textarea/issues/149
+  #   react-dates: https://github.com/airbnb/react-dates/issues/2105
+  #   react-with-direction: https://github.com/airbnb/react-with-direction/issues/20
+  - pattern: "calypso@workspace:client provides react (p96bfa) with version 17.0.2, which doesn't satisfy what @automattic/isolated-block-editor and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   react-simple-code-editor: https://github.com/satya164/react-simple-code-editor/issues/75
+  - pattern: "calypso@workspace:client provides react (p44ec6) with version 17.0.2, which doesn't satisfy what react-live and some of its descendants request"
+    level: discard
+  - pattern: "calypso@workspace:client provides react-dom (p2ead7) with version 17.0.2, which doesn't satisfy what react-live and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   react-autosize-textarea: https://github.com/buildo/react-autosize-textarea/issues/149
+  #   react-dates: https://github.com/airbnb/react-dates/issues/2105
+  #   react-with-direction: https://github.com/airbnb/react-with-direction/issues/20
+  - pattern: "calypso@workspace:client provides react-dom (p5dfcf) with version 17.0.2, which doesn't satisfy what @automattic/isolated-block-editor and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   react-autosize-textarea: https://github.com/buildo/react-autosize-textarea/issues/149
+  - pattern: "wp-calypso@workspace:. provides react (pc4e63) with version 17.0.2, which doesn't satisfy what @types/wordpress__block-editor and some of its descendants request"
+    level: discard
+  - pattern: "wp-calypso@workspace:. provides react-dom (p05bbc) with version 17.0.2, which doesn't satisfy what @types/wordpress__block-editor and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   airbnb-prop-types: https://github.com/airbnb/prop-types/issues/73
+  #   react-dates: https://github.com/airbnb/react-dates/issues/2105
+  #   react-with-direction: https://github.com/airbnb/react-with-direction/issues/20
+  - pattern: "wp-calypso@workspace:. provides react (pc2c5a) with version 17.0.2, which doesn't satisfy what @wordpress/components and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   react-dates: https://github.com/airbnb/react-dates/issues/2105
+  #   react-with-direction: https://github.com/airbnb/react-with-direction/issues/20
+  - pattern: "wp-calypso@workspace:. provides react-dom (p30815) with version 17.0.2, which doesn't satisfy what @wordpress/components and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   @react/router: https://github.com/reach/router/issues/429
+  #   create-react-context: https://github.com/jamiebuilds/create-react-context/pull/33
+  - pattern: "calypso@workspace:client provides react (pf0c51) with version 17.0.2, which doesn't satisfy what @automattic/components and some of its descendants request"
+    level: discard
+  - pattern: "wp-calypso@workspace:. provides react (p08767) with version 17.0.2, which doesn't satisfy what @automattic/components and some of its descendants request"
+    level: discard
+
+  # Depends on
+  #   @react/router: https://github.com/reach/router/issues/429
+  - pattern: "calypso@workspace:client provides react-dom (p69c5d) with version 17.0.2, which doesn't satisfy what @automattic/components and some of its descendants request"
+    level: discard
+  - pattern: "wp-calypso@workspace:. provides react-dom (pff688) with version 17.0.2, which doesn't satisfy what @automattic/components and some of its descendants request"
+    level: discard
+
 nodeLinker: node-modules
 
 packageExtensions:
