Fix typescript issues
- @types/react had to be pinned to v17 to prevent TSC compilation
  errors. This is because TSC would sometimes resolve types for
  react 16, which isn't used by us, but gets included by some
  dependencies.
- jest-haste-map had to be pinned to v27 because a different part
  of jest was importing from jest-haste-map without having had
  jest-haste-map in its package.json. As a result, it would resolve
  an older version of jest-haste-map, which had incorrect types.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,11 @@ logFilters:
   - pattern: 'fsevents@*/* The platform * is incompatible with this module, link skipped.'
     level: discard
 
+  - pattern: '@swc/core* The platform * is incompatible with this module, link skipped.'
+    level: discard
+  - pattern: '@swc/core* The CPU architecture * is incompatible with this module, link skipped.'
+    level: discard
+
   # Depends on
   #   airbnb-prop-types: https://github.com/airbnb/prop-types/issues/73
   #   react-autosize-textarea: https://github.com/buildo/react-autosize-textarea/issues/149
@@ -68,6 +73,9 @@ logFilters:
 nodeLinker: node-modules
 
 packageExtensions:
+  jest-resolve@^27.0.6:
+    dependencies:
+      jest-haste-map: '^27.0.6'
   '@emotion/native@10.0.27':
     peerDependencies:
       '@emotion/core': '*'
