--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -51,13 +51,17 @@ packageExtensions:
   '@types/wordpress__plugins@2.3.7':
     peerDependencies:
       react: '*'
-  '@wordpress/annotations@1.24.8':
+  '@wordpress/annotations@2.2.2':
     peerDependencies:
+      redux: '*'
       react: '*'
   '@wordpress/api-fetch@3.23.1':
     peerDependencies:
       react-native: '*'
   '@wordpress/api-fetch@4.0.0':
+    peerDependencies:
+      react-native: '*'
+  '@wordpress/api-fetch@5.2.1':
     peerDependencies:
       react-native: '*'
   '@wordpress/block-editor@5.3.3':
@@ -67,6 +71,13 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/block-editor@7.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      reakit-utils: '*'
+      redux: '*'
+      react-native: '*'
   '@wordpress/block-library@2.29.3':
     peerDependencies:
       '@wp-g2/create-styles': '*'
@@ -74,9 +85,17 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
-  '@wordpress/blocks@7.0.6':
+  '@wordpress/block-library@5.0.1':
     peerDependencies:
       react: '*'
+      react-dom: '*'
+      reakit-utils: '*'
+      redux: '*'
+      react-native: '*'
+  '@wordpress/blocks@11.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wordpress/blocks@8.0.3':
     peerDependencies:
       react: '*'
@@ -92,18 +111,46 @@ packageExtensions:
       react: '*'
       react-dom: '*'
       react-native: '*'
+  '@wordpress/components@15.0.0':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
+  '@wordpress/components@16.0.0':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      react-native: '*'
+      redux: '*'
   '@wordpress/compose@3.25.3':
+    peerDependencies:
+      react: '*'
+  '@wordpress/compose@5.0.1':
     peerDependencies:
       react: '*'
   '@wordpress/core-data@2.26.3':
     peerDependencies:
       react: '*'
       react-native: '*'
+  '@wordpress/core-data@4.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
+      react-native: '*'
   '@wordpress/data-controls@1.21.3':
     peerDependencies:
       react: '*'
       react-native: '*'
+  '@wordpress/data-controls@2.2.2':
+    peerDependencies:
+      redux: '*'
+      react: '*'
+      react-native: '*'
   '@wordpress/data@4.27.3':
+    peerDependencies:
+      react: '*'
+  '@wordpress/data@6.0.1':
     peerDependencies:
       react: '*'
   '@wordpress/edit-post@3.27.3':
@@ -127,6 +174,13 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/editor@11.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      reakit-utils: '*'
+      redux: '*'
+      react-native: '*'
   '@wordpress/format-library@1.27.3':
     peerDependencies:
       '@wp-g2/create-styles': '*'
@@ -134,10 +188,12 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
-  '@wordpress/interface@1.0.6':
+  '@wordpress/format-library@3.0.1':
     peerDependencies:
       react: '*'
       react-dom: '*'
+      reakit-utils: '*'
+      redux: '*'
       react-native: '*'
   '@wordpress/interface@2.0.2':
     peerDependencies:
@@ -146,6 +202,13 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/interface@4.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      reakit-utils: '*'
+      react-native: '*'
+      redux: '*'
   '@wordpress/jest-preset-default@7.0.3':
     peerDependencies:
       '@babel/core': '*'
@@ -154,18 +217,30 @@ packageExtensions:
   '@wordpress/keyboard-shortcuts@1.14.3':
     peerDependencies:
       react: '*'
-  '@wordpress/list-reusable-blocks@1.25.8':
+  '@wordpress/keyboard-shortcuts@3.0.1':
     peerDependencies:
-      '@wordpress/data': '*'
+      react: '*'
+      redux: '*'
+  '@wordpress/list-reusable-blocks@3.0.1':
+    peerDependencies:
       react: '*'
       react-dom: '*'
       react-native: '*'
+      reakit-utils: '*'
+      redux: '*'
   '@wordpress/media-utils@1.20.3':
+    peerDependencies:
+      react-native: '*'
+  '@wordpress/media-utils@3.0.0':
     peerDependencies:
       react-native: '*'
   '@wordpress/notices@2.13.3':
     peerDependencies:
       react: '*'
+  '@wordpress/notices@3.2.2':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wordpress/nux@3.25.3':
     peerDependencies:
       '@wp-g2/create-styles': '*'
@@ -175,6 +250,10 @@ packageExtensions:
       reakit-utils: '*'
   '@wordpress/plugins@2.25.3':
     peerDependencies:
+      react: '*'
+  '@wordpress/plugins@4.0.1':
+    peerDependencies:
+      react-native: '*'
       react: '*'
   '@wordpress/postcss-plugins-preset@3.0.0':
     peerDependencies:
@@ -186,9 +265,20 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/reusable-blocks@3.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      reakit-utils: '*'
+      redux: '*'
+      react-native: '*'
   '@wordpress/rich-text@3.25.3':
     peerDependencies:
       react: '*'
+  '@wordpress/rich-text@5.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wordpress/scripts@15.0.1':
     peerDependencies:
       '@babel/core': '*'
@@ -201,12 +291,26 @@ packageExtensions:
       react-dom: '*'
       react-native: '*'
       reakit-utils: '*'
+  '@wordpress/server-side-render@3.0.1':
+    peerDependencies:
+      react: '*'
+      react-dom: '*'
+      reakit-utils: '*'
+      react-native: '*'
+      redux: '*'
   '@wordpress/url@2.22.2':
+    peerDependencies:
+      react-native: '*'
+  '@wordpress/url@3.2.1':
     peerDependencies:
       react-native: '*'
   '@wordpress/viewport@2.26.3':
     peerDependencies:
       react: '*'
+  '@wordpress/viewport@4.0.1':
+    peerDependencies:
+      react: '*'
+      redux: '*'
   '@wp-g2/components@0.0.140':
     peerDependencies:
       '@wordpress/data': '*'
@@ -239,13 +343,12 @@ packageExtensions:
     peerDependenciesMeta:
       webpack:
         optional: true
-  '@automattic/isolated-block-editor@1.0.2':
+  '@automattic/isolated-block-editor@2.3.0':
     peerDependencies:
-      '@wp-g2/create-styles': '*'
       react: '*'
       react-dom: '*'
+      redux: '*'
       react-native: '*'
-      reakit-utils: '*'
   jest-enzyme@7.1.2:
     peerDependencies:
       react: '*'
